--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-html {background-color
-  : blue ;}
+html {background-color:blue;}
 body
 {font-size:70px; color:GREEN;}
 .img{ background-color:green; width:20px;}
