--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-html {background-color:blue;}
+html {background-color:black;}
 body
 {font-size:70px; color:GREEN;}
 .img{ background-color:green; width:20px;}
