--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 html {background-color:black;}
-body
-{font-size:70px; color:GREEN;}
+body {font-size:70px; color:GREEN;}
 .img{ background-color:green; width:20px;}
 .grande{font-family:impact;}
